tests-integration/fixtures/checking/273_expression_hole/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
hole :: ?[missing expression]

Types

Diagnostics
error[CannotUnify]: Cannot unify 'Type' with '?[invalid kind]'
  --> 3:1..3:13
  |
3 | hole = ?hole
  | ^~~~~~~~~~~~
